--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                                 <td><label for="department">Department:</label></td>
                                 <td>
                                     <select id="department" name="department">
-                                        <option value="">Select a department</option>
+                                        <option value="">Select a department:</option>
                                         <option value="dermatology">Dermatology</option>
                                         <option value="ent">ENT</option>
                                         <option value="cardiology">Cardiology</option>
